fix: fix overlapping background image on homepage and add email placeholder text in modal

--- a/css/style.css
+++ b/css/style.css
@@ -30,10 +30,10 @@ body {
 }
 
 .block {
-    background-image: url("../img/background.min.jpg");
     background-size: cover;
     background-position: center;
     height: 100vh;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -88,6 +88,7 @@ body {
 #progress-bars {
     text-transform: uppercase;
     text-align: center;
+    font-size: 2em;
     word-spacing: 0.3em;
     background-color: #e1b284;
     color: #000;
@@ -112,6 +113,7 @@ body {
 #latest-news {
     text-align: center;
     text-transform: uppercase;
+    font-size: 2em;
     word-spacing: 0.3em;
     background-color: #e1b284;
     color: #000;
@@ -126,6 +128,7 @@ body {
 .book-titles {
     text-transform: uppercase;
     text-align: center;
+    font-size: 2em;
     word-spacing: 0.2em;
     background-color: #e1b284;
     color: #000;
@@ -141,6 +144,7 @@ body {
 .about-guy {
     text-align: center;
     text-transform: uppercase;
+    font-size: 2em;
     word-spacing: 0.3em;
     background-color: #e1b284;
     color: #000;
